# tic-tac-toe-evolution

./: .gitignore  Cargo.toml  README.md
src/: board.rs  bot.rs  main.glade  main.rs
